--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,8 @@
   "rules": {
     "require-jsdoc": "off",
     "new-cap": "off",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off"
   },
   "settings": { "react": { "version": "detect" } }
 }
