Implement auth context, login, and register

--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "axios": "^1.6.2",
+    "framer-motion": "^10.16.14",
     "next": "14.0.3",
     "next-stride": "^2.6.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@tsconfig/next": "^2.0.1",
