--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,7 @@
 {
-  "env": { "browser": true, "es2021": true },
-  "extends": ["plugin:react/recommended", "google", "prettier"],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaFeatures": { "jsx": true },
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "plugins": ["react", "@typescript-eslint"],
+  "extends": "next",
   "rules": {
-    "require-jsdoc": "off",
-    "new-cap": "off",
-    "react/react-in-jsx-scope": "off",
-    "react/prop-types": "off"
-  },
-  "settings": { "react": { "version": "detect" } }
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off"
+  }
 }
