--- a/.prettierrc
+++ b/.prettierrc
@@ -4,14 +4,5 @@
   "tabWidth": 2,
   "trailingComma": "es5",
   "singleQuote": true,
-  "semi": false,
-  "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": 2021
-    },
-    "extends": [
-        "plugin:@typescript-eslint/recommended",
-        "prettier/@typescript-eslint",
-        "plugin:prettier/recommended"
-    ]
+  "semi": false
 }
