--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "use-debounce": "^10.0.0"
+    "react-icons": "^4.12.0",
+    "use-debounce": "^10.0.0",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@tsconfig/next": "^2.0.1",
@@ -35,8 +37,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-google": "^0.14.0",
@@ -45,7 +47,7 @@
     "eslint-plugin-react": "^7.33.2",
     "husky": "^8.0.0",
     "postcss": "^8",
-    "prettier": "^3.1.0",
+    "prettier": "3.1.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
