--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-select": "^5.8.0",
     "use-debounce": "^10.0.0",
     "usehooks-ts": "^2.9.1"
   },
