--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
     "js-cookie": "^3.0.5",
+    "lottie-react": "^2.4.0",
     "next": "14.0.3",
     "next-stride": "^2.6.4",
     "react": "^18",
